syntax = "proto3";
package consumer_bot;
import "common.proto";
option go_package = "github.com/nikhovas/diploma/go/lib/proto/consumer_bot";

message SimpleMessageInformation {
    common.MsgLocation msgLocation = 1;
    string text = 2;
}

message ReplyMessageInformation {
    common.MsgLocation msgLocation = 1;
    string text = 2;
    uint64 replyMessageId = 3;
    string replyUnsupportedText = 4;
}

message SendSimpleMessageRequest {
    string uuid = 1;
    SimpleMessageInformation info = 2;
}

message SendReplyMessageRequest {
    string uuid = 1;
    ReplyMessageInformation info = 2;
}

service VkServer {
    rpc SendSimpleMessage(SendSimpleMessageRequest) returns (common.EmptyResponse) {}
    rpc SendReplyMessage(SendReplyMessageRequest) returns (common.EmptyResponse) {}
}