syntax = "proto3";
package question_worker;
option go_package = "github.com/nikhovas/diploma/go/lib/proto/question_worker";

message GetProductRequest {
    string uuid = 1;
    string text = 2;
    string basePath = 4;
}

message CustomerProductElement {
    int64 productId = 1;
    int64 count = 2;
}

message GetProductResponse {
    repeated CustomerProductElement products = 1;
}

service ProductNeuralWorker {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
}